--- a/src/app/addbook/addbook.component.html
+++ b/src/app/addbook/addbook.component.html
@@ -4,7 +4,7 @@
             <label for="name">Name</label>
             <input type="text" name="name" formControlName="name" size="1" id="name" class="trninput"/>
             <label for="price">Price</label>
-            <input type="number" name="price" id="price" formControlName="price" size="1" class="trninput"/>
+            <input type="text" name="price" id="price" formControlName="price" size="1" class="trninput"/>
             <label for="author">Author</label>
             <input type="text" name="author" formControlName="author" size="1" id="author" class="trninput"/>
             <label for="desc">Short Description</label>
