--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-
+<div class="search">
+    <input type="text" class="searchTerm" placeholder="Enter text"/>
+</div>
 
 <table class="table table-striped">
     <thead>
